[package]
name = "sesd"
version = "0.1.0"
authors = ["Lars Krueger <lars_e_krueger@gmx.de>"]
edition = "2018"
description = "Structured Editing of Stream Data"
readme = "readme.md"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
